package Ejercicio2;

public interface IntPaymentProcessor {
    public void realizarPago();
    public void cancelarPago();
    public void reembolsarPago();
}
