package Ejercicio2;

public interface IntPizza {

    void prepare();

    void bake();

    void cut();

    void box();
}
